--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-This is Joielechong Project
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Joielechong, Autodidact Learner</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Joielehong!</h1>
+				<p>I'm best known as Joielechong <em>The Risk Taker</em>. <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:joielechong@yahoo.fr">email</a></li>
+        		<li><a href="https://github.com/joielechong">github.com/joielechong</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
