minor edit at index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Joielehong!</h1>
+        		<h1>Hi there, I'm Joielechong!</h1>
 				<p>I'm best known as Joielechong <em>The Risk Taker</em>. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
