change direct email address in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:joielechong@yahoo.fr">email</a></li>
+        		<li><email : joielechong at yahoo dot fr</li>
         		<li><a href="https://github.com/joielechong">github.com/joielechong</a></li>
 			</ul>
 		</footer>
