first use of jekyll template

--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Joielechong, Autodidact Learner</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Joielechong!</h1>
-				<p>I'm best known as Joielechong <em>The Risk Taker</em>. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><email : joielechong at yahoo dot fr</li>
-        		<li><a href="https://github.com/joielechong">github.com/joielechong</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Joielechong, Autodidact Learner
+---
+<div class="blurb">
+    <h1>Hi there, I'm Joielechong!</h1>
+	<p>I'm best known as Joielechong <em>The Risk Taker</em>. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
