Add simple about

--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Joielechong, Autodidact Learner
 ---
 <div class="blurb">
-    <h1>Hi there, I'm Joielechong!</h1>
+    <h1>Joielechong, The Risk Taker..</h1>
 	<p>I'm an avid reader and avid learner. I learn everything that can be learned; Personal Development, NLP, Programming, Blogging, Accounting, and every things.</p>
 	<br/>
 	<p>Currently focusing myself on developing Android Application.</p>
